--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,25 @@
+nav  {
+    background-color: #A5D0A8;
+    padding: 10px;
+}
+nav a  {
+    color: white;
+    display: block;
+    padding: 20px;
+}
+h1  {
+    color:#8CADA7;
+}
+img  {
+    width: 150px;
+    height:auto;
+    border: 1px solid steelblue;
+    padding: 2px;
+    box-shadow: 0 0 30px gray;
+}
+p  {
+    padding: 10px;
+}
 main  {
     max-width: 840px;
 }
