--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ nav a  {
 h1  {
     color:#00ffd0;
 }
-img  {
+main img  {
     width: 150px;
     height:auto;
     border: 1px solid rgb(0, 0, 0);
@@ -18,18 +18,23 @@ img  {
     box-shadow: 0 0 30px rgb(127, 127, 127);
 }
 p  {
-    padding: 10px;
+    padding: 0;
 }
 main  {
     max-width: 840px;
+}
+footer  {
+    margin-top: 1em;
+    border-top: 1px solid #000000;
+    text-align: center;
 }
 
 aside {
     width: 20rem;
     margin: 1rem;
-    border: 1px solid rgba(81, 83, 191, 0.2) ; /* 1 */
+    border: 1px solid rgba(255, 255, 255, 0.2) ; /* 1 */
     padding: 1rem;
-    background-color: #d06431;
-    color: #cd63c6;
+    background-color: #ffffff;
+    color: #ffffff;
     text-align: center;
 }
