--- a/styles.css
+++ b/styles.css
@@ -37,4 +37,9 @@ aside {
     background-color: #ffffff;
     color: #ffffff;
     text-align: center;
+    
+}
+aside img  {
+    width: 200px;
+    height: auto;
 }
