--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,9 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 nav  {
     background-color: #000000;
     padding: 10px;
@@ -16,6 +22,7 @@ main img  {
     border: 1px solid rgb(0, 0, 0);
     padding: 2px;
     box-shadow: 0 0 30px rgb(127, 127, 127);
+    float: right;
 }
 p  {
     padding: 0;
@@ -42,4 +49,16 @@ aside {
 aside img  {
     width: 200px;
     height: auto;
+}
+/* Class Selectors*/
+.box {
+margin: 1rem;
+border: 1px solid rgba (0,0,0,.1);
+padding: 1rem;
+background-color: #ddd;
+color: #000;
+}
+aside{
+    width: 20em;
+    text-align: center;
 }
