--- a/styles.css
+++ b/styles.css
@@ -58,6 +58,11 @@ padding: 1rem;
 background-color: #ddd;
 color: #000;
 }
+aside h2 {
+position: absolute;
+top: 47px;
+left: 150px;
+}
 aside{
     width: 20em;
     text-align: center;
