--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -1,9 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
 
 :root {
-    --primary-color: #0077B6;
-    --secondary-color: #F9A825;
-    --text-color: #333;
+    --primary-color: #95cfef;
+    --secondary-color: #5d4e36;
+    --text-color: #ffffff;
 }
 
 body {
@@ -32,20 +32,32 @@ main {
     padding: 20px;
 }
 
+.employee-profiles {
+    display: flex; 
+    justify-content: space-around; 
+    align-items: center; 
+}
+
 .employee {
-    display: inline-block;
-    text-align: center;
-    margin: 0 20px;
-    width: 20px;
-    height: auto;
+    text-align: center; 
+    display: inline-block; 
+    margin: 0 10px; 
 }
 
-.employee img {
-    display: block;
-    width: 20px;
-    height: auto;
+.employee-photo {
+    width: 100px; 
+    height: 100px; 
+    border-radius: 50%; 
+    overflow: hidden; 
+    margin: 0 auto; 
 }
 
+.employee-photo img {
+    width: 100%; 
+    height: 100%; 
+    object-fit: cover; 
+
+}
 h1 {
     position: absolute;
     top: 40%;
