--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
 
 :root {
-    --primary-color: #95cfef;
-    --secondary-color: #5d4e36;
+    --primary-color: #2b2458;
+    --secondary-color: #ff9d00;
     --text-color: #ffffff;
 }
 
@@ -17,7 +17,7 @@ header {
     background-color: var(--secondary-color);
     padding: 20px;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
 }
 
 nav a {
@@ -34,7 +34,7 @@ main {
 
 .employee-profiles {
     display: flex; 
-    justify-content: space-around; 
+    justify-content: space-between; 
     align-items: center; 
 }
 
@@ -88,6 +88,34 @@ article img {
 
 section {
     padding: 20px 0;
+}
+
+.trip {
+    display: flex;
+    margin-bottom: 20px;
+}
+
+.trip-image {
+    flex: flex;
+    text-align: justify;
+}
+
+.trip-image img {
+    max-width: 200px;
+    height: auto;
+}
+
+.trip-details {
+    flex: flex;
+    padding: 10px;
+}
+
+.trip-details h3 {
+    font-size: 1rem;
+}
+
+.trip-details p {
+    font-size: 1.2rem;
 }
 
 h2 {
