--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -1,9 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
 
 :root {
-    --primary-color: #2b2458;
-    --secondary-color: #ff9d00;
-    --text-color: #ffffff;
+    --primary-color: #3a6b7e;
+    --secondary-color: #da9930;
+    --text-color: #d7f9d8;
 }
 
 body {
